--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
   <link rel="manifest" href="/site.webmanifest" />
 
+  <!-- Font links -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+
 
   <!-- Other meta tags, title, etc. -->
   <meta charset="UTF-8" />
