--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
+
   <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -13,9 +14,13 @@
   <link rel="manifest" href="/site.webmanifest" />
   <!-- End Favicons -->
 
-  <meta name="theme-color" content="#fbbf24">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#fbbf24" />
+
   <title>SitePot - A pot of highly potential domains</title>
+
+  <meta name="description"
+    content="SitePot.com is a premier domain marketplace. Browse and buy curated .com domains with offers starting at $500. Find your perfect domain and shine online!" />
 </head>
 
 <body>
