--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8" />
 
+  <!-- Pinterest Domain Verification -->
+  <meta name="p:domain_verify" content="61a9052c672ac9ce40be65c0046a0085" />
+
   <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
